fix: allow vertical scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  padding-bottom: calc(var(--size-container) + 2 * var(--size-padding));
 }
 
 .swipe-container {
