--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@
 
 html, body {
   margin: 0;
-  overflow-x: hidden;
   box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 *, *::before, *::after {
